# trajole

./: .gitignore  MANIFEST.in  README.md  build_client.sh  build_client2.sh  build_clients.sh  build_local_client.sh  build_lounge_client.sh  build_lounge_dev_client.sh  dev.sh  dev_clear.sh  dev_local.sh  dev_lounge.sh  dev_server.sh  format.sh  main_lounge_dev_update.sh  main_lounge_update.sh  pyproject.toml  readme.md  release.md  remote_restart_lounge.sh  serve_lounge.sh  setup.py  update_lounge.sh  update_lounge_dev.sh  upload_lounge.sh  upload_lounge_files.sh
client/: build.sh  index.html  package.json  vite.config.js
client/src/: main.js  store.js  webcomponent.js
client2/: package.json
client2/src/: main.js
config/: config.json  local.config.prod.json  local.dev.json  local.prod.json  lounge-dev.config.json  lounge.config.json  port.json
examples/: dev_server.sh
examples/fes/: cv_trace.yaml  fes.yaml  matrix.yaml  sim.yaml
examples/frame/: 3hhm.views.yaml
examples/ligands/: 2vuk.csv  2vuk.oeb  fred100.sdf  ligands6.sdf  readme.md  receptor.views.yaml
examples/matrix/: matrix.yaml  trajectory-0.h5
examples/re/: aldock.yaml  energy.h5  j1-complex.parmed  k_n.json  launch.yaml  ligand-trajectory.h5  pmf.yaml  pmf_tanh.yaml  pmf_upper_percentile.yaml  pmf_upper_tanh.json  pmf_upper_tanh.yaml  replicas.yaml  sim.yaml  stdout  system.yaml  (+1 more)
rshow/: alphaspace.py  app.py  app_from_dev_config.py  cli.py  handlers.py  log.py  make_app.py  mode.py  openurl.py  persist.py  readers.py  run_app.py  serve.py  stream.py  util.py
server/: cli.py  readers.py
(+207 files in other folders)
