[project]
name = "rshow"
version = "1.6.11"
description = "MD trajectory viewer"
authors = [{name = "Bosco Ho", email = "apposite@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "addict",
    "easytrajh5>=0.2.17",
    "fastapi",
    "mdtraj>=1.9.10",
    "numpy<2.0",
    "path",
    "psutil",
    "pydash",
    "python-multipart",
    "rdkit",
    "rich",
    "starlette",
    "uvicorn",
]

[project.scripts]
rshow = 'rshow.cli:cli'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


